--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,2 +1,2 @@
 <h1>Hello from mustage</h1>
-<a href="/api/lessons/" class="waves-effect waves-light btn">All lessons</a>
+<a href="/lessons/" class="waves-effect waves-light btn">All lessons</a>
