--- a/views/updateLesson.hbs
+++ b/views/updateLesson.hbs
@@ -1,4 +1,4 @@
-<form class="col s12" action="/api/lessons/update/" method="post">
+<form class="col s12" action="/lessons/update/" method="post">
     <div class="row">
         <div class="input-field col s6">
             <input class="validate" id="name" type="text" name="name" /value="{{lesson.name}}">
