--- a/views/partials/head.hbs
+++ b/views/partials/head.hbs
@@ -4,5 +4,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link rel="stylesheet" href="/stylesheet/style.css">
+    <script src="/js/script.js"></script>
     <title>{{title}}</title>
 </head>
