--- a/views/partials/head.hbs
+++ b/views/partials/head.hbs
@@ -3,6 +3,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+    <link rel="icon" type="image/x-icon" href="/images/icons8-video-lesson-66.png">
     <link rel="stylesheet" href="/stylesheet/style.css">
     <script src="/js/script.js"></script>
     <title>{{title}}</title>
