--- a/views/partials/nav.hbs
+++ b/views/partials/nav.hbs
@@ -1,6 +1,6 @@
 <nav>
     <div class="nav-wrapper">
-        <a href="/" class="brand-logo">Logo</a>
+        <a href="/" class="brand-logo">HOME</a>
         <ul id="nav-mobile" class="right hide-on-med-and-down">
             {{#if areLessons}}
             <li class="active"><a href="/lessons">All lessons</a></li>
