--- a/views/updateLesson.hbs
+++ b/views/updateLesson.hbs
@@ -9,7 +9,7 @@
             <label for="author">Author</label>
         </div>
         <div class="input-field col s6">
-            <input class="validate" id="price" type="text" name="price" value="{{lesson.price}}" />
+            <input class="validate" id="price" type="number" name="price" value="{{lesson.price}}" />
             <label for="price">Price</label>
         </div>
         <div class="input-field col s6">
